build/log/idf_py_stderr_output_152556
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:50:27: error: unsigned conversion from 'int' to 'uint8_t' {aka 'unsigned char'} changes value from '500' to '244' [-Werror=overflow]
   50 |         uint8_t timeout = 500;
      |                           ^~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:52:9: error: parameter names (without types) in function declaration [-Wdeclaration-missing-parameter-type]
   52 |         esp_err_t uart_enable_pattern_det_baud_intr(uart_num, pattern_chr, chr_num, timeout, idle_time, idle_time);
      |         ^~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:52:19: error: conflicting types for 'uart_enable_pattern_det_baud_intr'; have 'esp_err_t()' {aka 'int()'}
   52 |         esp_err_t uart_enable_pattern_det_baud_intr(uart_num, pattern_chr, chr_num, timeout, idle_time, idle_time);
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:52:9: note: an argument type that has a default promotion cannot match an empty parameter name list declaration
   52 |         esp_err_t uart_enable_pattern_det_baud_intr(uart_num, pattern_chr, chr_num, timeout, idle_time, idle_time);
      |         ^~~~~~~~~
In file included from /home/bmetal/esp-idf/uartTest/main/uartTest.c:2:
/home/bmetal/esp-idf/components/esp_driver_uart/include/driver/uart.h:675:11: note: previous declaration of 'uart_enable_pattern_det_baud_intr' with type 'esp_err_t(uart_port_t,  char,  uint8_t,  int,  int,  int)' {aka 'int(uart_port_t,  char,  unsigned char,  int,  int,  int)'}
  675 | esp_err_t uart_enable_pattern_det_baud_intr(uart_port_t uart_num, char pattern_chr, uint8_t chr_num, int chr_tout, int post_idle, int pre_idle);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:58:38: warning: unused variable 'responseData' [-Wunused-variable]
   58 |                 struct LaserResponse responseData;
      |                                      ^~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:56:25: warning: unused variable 'rx_junk_read' [-Wunused-variable]
   56 |                 uint8_t rx_junk_read = uart_read_bytes(uart_num, rx_junk, index, 500);
      |                         ^~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:63:25: error: 'responseData' undeclared (first use in this function)
   63 |                         responseData.payload_distance = (rx_data[6]<<24)|(rx_data[7]<<16)|(rx_data[8]<<8)|(rx_data[9]);
      |                         ^~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:63:25: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/bmetal/esp-idf/components/esp_common/include/esp_check.h:9,
                 from /home/bmetal/esp-idf/components/esp_driver_uart/include/driver/uart.h:14:
/home/bmetal/esp-idf/uartTest/main/uartTest.c:66:63: error: 'rx_incoming' undeclared (first use in this function)
   66 |                         ESP_LOGI("Data Read", "%d bytes:'%s'",rx_incoming,rx_data);
      |                                                               ^~~~~~~~~~~
/home/bmetal/esp-idf/components/log/include/esp_log.h:220:167: note: in definition of macro 'ESP_LOG_LEVEL'
  220 |         if (ESP_LOG_GET_LEVEL(configs)==ESP_LOG_ERROR)        { esp_log(ESP_LOG_CONFIG_INIT(ESP_LOG_ERROR),   tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                                                       ^~~~~~~~~~~
/home/bmetal/esp-idf/components/log/include/esp_log.h:127:41: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  127 | #define ESP_LOGI(tag, format, ...) do { ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO, tag, format, ##__VA_ARGS__); } while(0)
      |                                         ^~~~~~~~~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:66:25: note: in expansion of macro 'ESP_LOGI'
   66 |                         ESP_LOGI("Data Read", "%d bytes:'%s'",rx_incoming,rx_data);
      |                         ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:51:17: warning: unused variable 'idle_time' [-Wunused-variable]
   51 |         uint8_t idle_time = 0;
      |                 ^~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:50:17: warning: unused variable 'timeout' [-Wunused-variable]
   50 |         uint8_t timeout = 500;
      |                 ^~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:49:17: warning: unused variable 'chr_num' [-Wunused-variable]
   49 |         uint8_t chr_num = 1;
      |                 ^~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:48:14: warning: unused variable 'pattern_char' [-Wunused-variable]
   48 |         char pattern_char = 0xAA;
      |              ^~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c: At top level:
/home/bmetal/esp-idf/uartTest/main/uartTest.c:69:9: error: expected identifier or '(' before '}' token
   69 |         }
      |         ^
/home/bmetal/esp-idf/uartTest/main/uartTest.c:70:1: error: expected identifier or '(' before '}' token
   70 | }
      | ^
cc1: all warnings being treated as errors
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
